# code_search

./: Baseline.py  Config.py  Context.py  Context_based_match.py  DFG_generator.py  README.md  bindiff_eval.py  callgraph.py  callgraph_based_matching.py  cfg_constructor.py  data_ref.py  evl.py  func_sig.py  graph_edit_distance.py  ngram.py  sngram.py
LLVM_feature/: llvm_ir_parser.py
config/: Config.py  Config_old.py  __init__.py  config
evl/: __init__.py  evl.py  statistic.py
feature_collector/: callgraph.py  callgraph_based_matching.py  feature_collector.sh  func.py
ida_feature/: callgraph.py  callgraph_based_matching.py  data_ref.py  feature_collector.sh  func.py
mcsema/: func.py  std_defs.txt
mcsema/Hello/: CMakeLists.txt  Hello.cpp
mcsema/Hello0/: CMakeLists.txt  Hello0.cpp  Makefile
mcsema/bin_descend/: func_extractor.py  get_cfg.py  std_des_generator.py
script/: callgraph.sh  code_search.sh  command  del.sh  feature.sh  feature0.sh  idb.sh  rm0.sh  rm3.sh
